[workspace]
resolver = "2"
members = [
    "crates/egui_demo_app",
]

[workspace.package]
name = "unworldly"
license = "MIT OR Apache-2.0"
rust-version = "1.78"
version = "0.27.2"
authors = ["ksks2012 <st890751999@gmail.com>"]
edition = "2021"

[workspace.dependencies]
emath = { version = "0.27.2", path = "crates/emath", default-features = false }
ecolor = { version = "0.27.2", path = "crates/ecolor", default-features = false }
epaint = { version = "0.27.2", path = "crates/epaint", default-features = false }
egui = { version = "0.27.2", path = "crates/egui", default-features = false }
# egui_plot = { version = "0.27.2", path = "crates/egui_plot", default-features = false }
egui-winit = { version = "0.27.2", path = "crates/egui-winit", default-features = false }
# egui_extras = { version = "0.27.2", path = "crates/egui_extras", default-features = false }
egui-wgpu = { version = "0.27.2", path = "crates/egui-wgpu", default-features = false }
# egui_demo_lib = { version = "0.27.2", path = "crates/egui_demo_lib", default-features = false }
egui_glow = { version = "0.27.2", path = "crates/egui_glow", default-features = false }
eframe = { version = "0.27.2", path = "crates/eframe", default-features = false }

ahash = { version = "0.8.11", default-features = false, features = [
    "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
    "std",
] }
backtrace = "0.3"
bytemuck = "1.7.2"
criterion = { version = "0.5.1", default-features = false }
document-features = " 0.2.8"
glow = "0.13"
glutin = "0.31"
glutin-winit = "0.4"
image = { version = "0.25", default-features = false }
log = { version = "0.4", features = ["std"] }
nohash-hasher = "0.2"
parking_lot = "0.12"
puffin = "0.19"
puffin_http = "0.16"
ron = "0.8"
raw-window-handle = "0.6.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.37"
web-time = "0.2" # Timekeeping for native and web
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.58"
wgpu = { version = "0.20.0", default-features = false, features = [
    # Make the renderer `Sync` even on wasm32, because it makes the code simpler:
    "fragile-send-sync-non-atomic-wasm",
] }
winit = { version = "0.29.4", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"